Fixed z-index for back to top on faq page

--- a/css/main.css
+++ b/css/main.css
@@ -352,6 +352,7 @@ ul#FAQTOC
     bottom: 30px;
     right: 20px;
     display: none;
+    z-index: 1000;
 }
 
 
